--- a/main.html
+++ b/main.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
-
-
-
-    <script type="text/javascript" src="./script.js">
-</script>
-<h1>
-	Hello World
-</h1>
-<h2>Introducing the Accio Ipsum</h2>
-<p>Accio ipsum dolor sit amet , course ,solve assignment,get placed above 5 lpa and live life king size</p>
-
-
+<html>
+<head>
+    <title>Accio Ipsum</title>
+</head>
+<body>
+    <h1>Hello World</h1>
+    <h2>Introducing the Accio Ipsum</h2>
+    <p>Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size.</p>
 </body>
-
 </html>
